[package]
name = "aur-aacs-keydb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
dotenv = "0.15"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "ssh"] }
log = "0.4"
env_logger = "0.11"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
shellexpand = "3.1.1"
